<resources>
    <string name="app_name">Registration greeting</string>
    <string name="exit">exit</string>
    <string name="profile">profile</string>
    <string name="login_main">Login</string>
    <string name="password_main">password</string>
    <string name="registration_main">Registration</string>
    <string name="sign_in_main">Sign In</string>
    <string name="new_login">new login</string>
    <string name="new_password">new password</string>
    <string name="back">Back</string>
    <string name="old_password_set">old password</string>
    <string name="change_profile">change profile</string>
    <string name="exit_from_app">exit from app</string>
    <string name="ad_title">App will be closed</string>
    <string name="ad_message">Do you want leave your profile?</string>
    <string name="ad_positive">YES</string>
    <string name="ad_negative">NO</string>
    <string name="ad_neutral">CANCEL</string>
    <string name="password">Password:</string>
    <string name="retype_password">Retype Password:</string>

    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_name">User name:</string>

</resources>